Lead renamed to booking

--- a/404.html
+++ b/404.html
@@ -78,7 +78,7 @@
         line-height: 0.95;
       }
 
-      .lead {
+      .booking {
         margin: 0;
         max-width: 28ch;
         font-size: 1rem;
@@ -149,7 +149,7 @@
         <section class="copy">
           <p class="eyebrow">404 Error</p>
           <h1>Page not found</h1>
-          <p class="lead">
+          <p class="booking">
             The page you are looking for is no longer here, or the address is incorrect.
           </p>
           <p class="contact">please contact Joachim</p>
