--- a/backend-tour.html
+++ b/backend-tour.html
@@ -29,7 +29,7 @@
       <section class="section">
         <div class="container">
           <h1 class="section-title" id="tourTitle">Tour</h1>
-          <p class="section-lead" id="tourSubtitle">Loading tour...</p>
+          <p class="section-booking" id="tourSubtitle">Loading tour...</p>
 
           <div id="tourError" class="backend-message" role="alert" aria-live="assertive"></div>
 
