--- a/backend.html
+++ b/backend.html
@@ -49,19 +49,19 @@
           </article>
 
           <article class="panel" style="padding: 1rem;">
-            <h2 class="section-title" style="font-size: 1.2rem;">Leads</h2>
+            <h2 class="section-title" style="font-size: 1.2rem;">Bookings</h2>
             <div class="backend-controls">
               <div class="field">
-                <label for="leadsSearch">Search leads</label>
-                <input id="leadsSearch" type="text" placeholder="id, customer, destination, owner..." />
+                <label for="bookingsSearch">Search bookings</label>
+                <input id="bookingsSearch" type="text" placeholder="id, customer, destination, owner..." />
               </div>
-              <button class="btn btn-ghost" id="leadsSearchBtn" type="button">Search</button>
-              <span id="leadsCountInfo" class="micro"></span>
+              <button class="btn btn-ghost" id="bookingsSearchBtn" type="button">Search</button>
+              <span id="bookingsCountInfo" class="micro"></span>
             </div>
             <div class="backend-table-wrap">
-              <table class="backend-table" id="leadsTable"></table>
+              <table class="backend-table" id="bookingsTable"></table>
             </div>
-            <div class="backend-pagination" id="leadsPagination" aria-label="Leads pagination"></div>
+            <div class="backend-pagination" id="bookingsPagination" aria-label="Bookings pagination"></div>
           </article>
 
           <article class="panel" style="padding: 1rem; margin-top: 1rem;">
