simple coming soon page

--- a/production/index.html
+++ b/production/index.html
@@ -4,16 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>AsiaTravelPlan | Coming Soon</title>
-    <meta
-      name="description"
-      content="AsiaTravelPlan is preparing a new website for tailor-made Southeast Asia journeys. Contact us directly for custom travel planning."
-    />
+    <meta name="description" content="AsiaTravelPlan is launching soon." />
     <meta name="robots" content="index,follow" />
     <meta property="og:title" content="AsiaTravelPlan | Coming Soon" />
-    <meta
-      property="og:description"
-      content="Tailor-made Southeast Asia journeys. The new AsiaTravelPlan website is launching soon."
-    />
+    <meta property="og:description" content="AsiaTravelPlan is launching soon." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="assets/happy_tourists.webp" />
     <meta name="theme-color" content="#e8efe9" />
@@ -21,69 +15,12 @@
     <link rel="stylesheet" href="assets/styles.css" />
   </head>
   <body>
-    <div class="page-shell">
-      <header class="topbar">
-        <a class="brand" href="/" aria-label="AsiaTravelPlan home">
-          <img src="assets/logo-asiatravelplan.svg" alt="AsiaTravelPlan" width="320" height="76" />
-        </a>
-        <p class="status-pill">Launching Soon</p>
-      </header>
-
-      <main class="hero-grid">
-        <section class="hero-copy">
-          <p class="eyebrow">Tailor-made Southeast Asia journeys</p>
-          <h1>Private routes, thoughtful planning, and local execution.</h1>
-          <p class="intro">
-            AsiaTravelPlan is preparing its new website. In the meantime, we are already available for custom itineraries,
-            route planning, and private travel support across Vietnam and Southeast Asia.
-          </p>
-
-          <div class="cta-row">
-            <a class="button button-primary" href="mailto:info@asiatravelplan.com">Email us</a>
-            <a class="button button-secondary" href="https://wa.me/84337942446">WhatsApp</a>
-          </div>
-
-          <dl class="contact-grid">
-            <div>
-              <dt>Email</dt>
-              <dd><a href="mailto:info@asiatravelplan.com">info@asiatravelplan.com</a></dd>
-            </div>
-            <div>
-              <dt>Phone</dt>
-              <dd><a href="tel:+84337942446">+84 337942446</a></dd>
-            </div>
-            <div>
-              <dt>Base</dt>
-              <dd>Hoi An, Vietnam</dd>
-            </div>
-          </dl>
-        </section>
-
-        <section class="hero-visual" aria-label="Travel photography preview">
-          <div class="visual-frame">
-            <img src="assets/happy_tourists.webp" alt="Travelers enjoying a guided trip in Southeast Asia" width="1400" height="933" />
-            <div class="visual-note">
-              <p>Website under construction</p>
-              <strong>Direct enquiries are open</strong>
-            </div>
-          </div>
-        </section>
-      </main>
-
-      <section class="promise-strip" aria-label="Service summary">
-        <article>
-          <h2>Custom itineraries</h2>
-          <p>Routes shaped around pace, budget, interests, and practical local logistics.</p>
-        </article>
-        <article>
-          <h2>Private support</h2>
-          <p>Transport, guides, stays, and trip structure prepared with on-the-ground context.</p>
-        </article>
-        <article>
-          <h2>Clear communication</h2>
-          <p>Direct contact while the full website and booking experience are being finalized.</p>
-        </article>
-      </section>
-    </div>
+    <main class="simple-shell">
+      <img class="simple-logo" src="assets/logo-asiatravelplan.svg" alt="AsiaTravelPlan" width="320" height="76" />
+      <div class="simple-visual-frame">
+        <img class="simple-visual" src="assets/happy_tourists.webp" alt="Travelers enjoying a guided trip in Southeast Asia" width="1400" height="933" />
+      </div>
+      <p class="simple-status">Coming Soon</p>
+    </main>
   </body>
 </html>
