--- a/backend-booking.html
+++ b/backend-booking.html
@@ -42,10 +42,10 @@
             <h2 class="section-title" style="font-size: 1.05rem;">Booking Actions</h2>
             <div class="backend-controls">
               <div class="field">
-                <label for="bookingOwnerSelect">Owner</label>
+                <label for="bookingOwnerSelect">Staff</label>
                 <select id="bookingOwnerSelect"></select>
               </div>
-              <button class="btn btn-ghost" id="bookingOwnerSaveBtn" type="button">Change owner</button>
+              <button class="btn btn-ghost" id="bookingOwnerSaveBtn" type="button">Change staff</button>
 
               <div class="field">
                 <label for="bookingStageSelect">Stage</label>
