--- a/backend-booking.html
+++ b/backend-booking.html
@@ -55,11 +55,11 @@
             </div>
 
             <div class="field">
-              <label for="bookingNoteInput">Add Note (Call notes, qualification details, customer preferences...)</label>
-              <textarea id="bookingNoteInput" rows="4" placeholder="Write a note..."></textarea>
+              <label for="bookingNoteInput">Booking Note (Call notes, qualification details, customer preferences...)</label>
+              <textarea id="bookingNoteInput" rows="4" placeholder="Write the current booking note..."></textarea>
             </div>
             <div class="backend-controls">
-              <button class="btn btn-primary" id="bookingNoteSaveBtn" type="button">Add note</button>
+              <button class="btn btn-primary" id="bookingNoteSaveBtn" type="button">Save note</button>
               <span id="bookingActionStatus" class="micro"></span>
             </div>
           </article>
